--- a/assets/templates/deleteBookform.html
+++ b/assets/templates/deleteBookform.html
@@ -5,7 +5,7 @@
     </header>
     <form class="deleteBookForm">
         <label for="title">Title</label>
-        <input type="text" name="title">
+        <input type="text" name="title" id="title">
         <button type="submit">delete</button>
     </form>
 </div>
