--- a/assets/templates/addBookForm.html
+++ b/assets/templates/addBookForm.html
@@ -15,7 +15,44 @@
             <input type="text" id="author" name="author" placeholder="Enter author name">
 
             <label for="category">Category:</label>
-            <input type="text" id="category" name="category" placeholder="Enter category">
+            <select id="category" name="category">
+                <optgroup label="Fiction">
+                    <option value="Chose a Category">Chose a Category</option>
+                    <option value="Fantasy">Fantasy</option>
+                    <option value="Science Fiction">Science Fiction</option>
+                    <option value="Horror">Horror</option>
+                    <option value="Mystery">Mystery</option>
+                    <option value="Crime">Crime</option>
+                    <option value="Thriller">Thriller</option>
+                    <option value="Romance">Romance</option>
+                    <option value="Historical Fiction">Historical Fiction</option>
+                    <option value="Children’s Fiction">Children’s Fiction</option>
+                    <option value="Classics">Classics</option>
+                </optgroup>
+
+                <optgroup label="Non-Fiction">
+                    <option value="Biography / Memoir">Biography / Memoir</option>
+                    <option value="History">History</option>
+                    <option value="Science & Nature">Science & Nature</option>
+                    <option value="Self-Help / Personal Development">Self-Help / Personal Development</option>
+                    <option value="Philosophy & Religion">Philosophy & Religion</option>
+                    <option value="Psychology">Psychology</option>
+                    <option value="Business / Economics">Business / Economics</option>
+                    <option value="Politics / Society">Politics / Society</option>
+                    <option value="Art & Photography">Art & Photography</option>
+                    <option value="Cooking / Food">Cooking / Food</option>
+                    <option value="Travel">Travel</option>
+                    <option value="Health">Health</option>
+                    <option value="Education">Education</option>
+                    <option value="Technology">Technology</option>
+                </optgroup>
+
+                <optgroup label="Special">
+                    <option value="Comics / Graphic Novels">Comics / Graphic Novels</option>
+                    <option value="Poetry">Poetry</option>
+                    <option value="Drama / Theatre">Drama / Theatre</option>
+                </optgroup>
+            </select>
 
             <label for="pages">Pages:</label>
             <input type="string" id="pages" name="pages" placeholder="Enter number of pages"> <!-- Input im Model validieren weil hier um Problem zu vermeiden string verwendet wird. valdierung nicht möglichj. -->
