corrected little bug/misunderstanding about the return value of checkboxes

--- a/assets/templates/addBookForm.html
+++ b/assets/templates/addBookForm.html
@@ -61,7 +61,7 @@
             <input type="text" id="publisher" name="publisher" placeholder="Enter publisher name">
 
             <label for="doneReading">Done Reading:</label>
-            <input type="checkbox" id="doneReading" name="doneReading">
+            <input type="checkbox" id="doneReading" name="doneReading" value="true">
 
             <button type="submit" id="handleBookSubmit" class="addBookFormButton">Add Book</button>
         </form>
